--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "govuk-mobile-backend-config",
   "version": "0.0.1",
   "description": "Static backend configuration for GOV.UK mobile apps",
-  "main": "build.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "npm test"
+    "test": "jest",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -18,5 +25,11 @@
   "bugs": {
     "url": "https://github.com/alphagov/govuk-mobile-backend-config/issues"
   },
-  "homepage": "https://github.com/alphagov/govuk-mobile-backend-config#readme"
+  "homepage": "https://github.com/alphagov/govuk-mobile-backend-config#readme",
+  "devDependencies": {
+    "@types/node": "20.12.7",
+    "gts": "^5.3.1",
+    "jest": "^29.7.0",
+    "typescript": "^5.4.3"
+  }
 }
