--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Static backend configuration for GOV.UK mobile apps",
   "main": "index.ts",
   "scripts": {
+    "prestart": "npm run compile",
+    "start": "node build/src/index.js",
     "test": "jest",
     "lint": "gts lint",
     "clean": "gts clean",
@@ -27,9 +29,20 @@
   },
   "homepage": "https://github.com/alphagov/govuk-mobile-backend-config#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jest": "^29.5.12",
+    "@types/lodash.merge": "^4.6.9",
     "@types/node": "20.12.7",
     "gts": "^5.3.1",
     "jest": "^29.7.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "ajv": "^8.17.1",
+    "commander": "^12.1.0",
+    "lodash.merge": "^4.6.2",
+    "semver": "^7.6.3",
+    "yaml": "^2.5.0"
   }
 }
