run linter on push

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,5 +9,5 @@ jobs:
       uses: actions/setup-node@v4
     - name: Install dependencies
       run: npm ci
-    - name: Run tests
+    - name: Run tests and lint
       run: npm test
