--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,17 +3,24 @@ on:
   push:
     branches:
       - main
-      - GOVUKAPP-576 # TODO remove when finished testing
 jobs:
   deploy-integration:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
     - uses: actions/checkout@v4
     - name: Setup Node.js
       uses: actions/setup-node@v4
     - name: Install dependencies
       run: npm ci
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: "arn:aws:iam::172025368201:role/github_action_config_signing"
+        role-session-name: gha-sign-mobile-backend-config
+        aws-region: eu-west-1
     - name: Build config for integration
-      run: npm start build -- integration --local-signature # use local signature for now until KMS is merged
+      run: npm start build -- integration --key-id alias/config-signing-key
     - name: Deploy appinfo to S3
       run: cat ./config.out/appinfo/* # just a placeholder for a real S3 command
