--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,13 +14,19 @@ jobs:
       uses: actions/setup-node@v4
     - name: Install dependencies
       run: npm ci
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials for KMS (Production)
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: "arn:aws:iam::172025368201:role/github_action_mobile_backend_sign_deploy"
-        role-session-name: gha-sign-deploy-mobile-backend-config
+        role-session-name: gha-sign-mobile-backend-config
         aws-region: eu-west-1
     - name: Build config for integration
       run: npm start build -- integration --key-id alias/config-signing-key
+    - name: Configure AWS credentials for S3 (Integration)
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: "arn:aws:iam::210287912431:role/github_action_mobile_backend_sign_deploy"
+        role-session-name: gha-deploy-mobile-backend-config
+        aws-region: eu-west-1
     - name: Deploy config to S3
       run: aws s3 sync ./config.out s3://govuk-app-remote-config-integration
