--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,4 +29,4 @@ jobs:
         role-session-name: gha-deploy-mobile-backend-config
         aws-region: eu-west-1
     - name: Deploy config to S3
-      run: aws s3 sync ./config.out s3://govuk-app-remote-config-integration
+      run: aws s3 sync ./config.out s3://govuk-app-remote-config-integration --content-type application/json
