--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,3 +30,5 @@ jobs:
         aws-region: eu-west-1
     - name: Deploy config to S3
       run: aws s3 sync ./config.out s3://govuk-app-remote-config-integration --content-type application/json
+    - name: Deploy static JSON to S3
+      run: aws s3 sync ./static s3://govuk-app-remote-config-integration/static --content-type application/json
