--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -12,4 +12,4 @@ jobs:
     - name: Validate documents
       run: find versions -name *.toml | xargs npm start validate
     - name: Validate static JSON
-      run: find static/* | xargs tools/json-check.sh
+      run: find static -type f | xargs tools/json-check.sh
