--- a/.github/workflows/deploy-integration.yaml
+++ b/.github/workflows/deploy-integration.yaml
@@ -26,6 +26,8 @@ jobs:
         aws-region: eu-west-1
     - name: Build config for integration
       run: npm start build -- integration --key-id alias/config-signing-key --output-directory ./config
+    - name: Minify files
+      run: find config static -type f | xargs tools/minify-json.sh
     - name: Generate signatures
       run: find config static -type f | xargs tools/create-signature.sh
     - name: Configure AWS credentials for S3 (Integration)
