--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -23,7 +23,7 @@ jobs:
         role-session-name: gha-sign-mobile-backend-config
         aws-region: eu-west-1
     - name: Build config for production
-      run: npm start build -- production --key-id alias/config-signing-key --output-directory ./config
+      run: npm start build -- production --output-directory ./config
     - name: Minify files
       run: find config static -type f | xargs tools/minify-json.sh
     - name: Generate signatures
